<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    >
    <org.eazegraph.lib.charts.PieChart
        xmlns:eaze="http://schemas.android.com/apk/res-auto"
        android:id="@+id/graph"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        eaze:egLegendHeight="0dp"
        eaze:egInnerPadding="75"
        eaze:egHighlightStrength="1"/>

    <TextView
        android:id="@+id/steps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:gravity="center"
        android:textSize="45sp"
        android:text="10.000"/>

    <TextView
        android:id="@+id/unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/steps"
        android:layout_centerHorizontal="true"
        android:text="@string/steps"
        android:textSize="20sp"/>

    <LinearLayout
        android:id="@+id/averageandtotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/graph"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/average"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/averageandtotaltext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/averageandtotal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/average"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/averageandtotal"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/total" />
    </LinearLayout>

    <org.eazegraph.lib.charts.BarChart xmlns:eaze="http://schemas.android.com/apk/res-auto"
        android:id="@+id/bargraph"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/averageandtotaltext"
        android:layout_marginTop="21dp"
        eaze:egLegendHeight="35dp"
        eaze:egShowValues="true" />

    <Button
        android:id="@+id/savedata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bargraph"
        android:layout_centerHorizontal="true"
        android:theme="@style/MyButton"
        android:text="Save Data" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_below="@id/savedata"
        android:id="@+id/count"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/edtTimerValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="minutes"
            android:inputType="number" />

        <Button
            android:id="@+id/btnStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:theme="@style/MyButton"
            android:gravity="center"
            android:text="Start Timer" />

        <Button
            android:id="@+id/btnStopTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:gravity="center"
            android:theme="@style/MyButton"
            android:text="Stop Timer"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvTimeCount"
            style="@style/normalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:00" />

    </LinearLayout>



</RelativeLayout>
